# argparse_formatter

./: .travis.yml  CHANGELOG.md  README.md  demo.py  flexidemo.py  pyproject.toml  setup.py
.github/workflows/: test.yml
argparse_formatter/: __init__.py  flexi_formatter.py  paragraph_formatter.py
argparse_paragraph/: __init__.py  paragraph_formatter.py
debian/: changelog  control  copyright  rules  watch
debian/tests/: control  pytest
test/: test_flexi.py  test_phelp.py
test/data/: default.ref  flexi.ref  paragraph.ref
